--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
+    android:layout_margin="5dp"
+    android:background="@color/bg_tela_login"
     android:orientation="vertical"
     android:gravity="center_vertical|center_horizontal"
 
@@ -12,13 +13,15 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:id="@+id/textViewLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login" />
+            android:text="@string/login"
+            android:textSize="20sp"/>
 
         <EditText
             android:id="@+id/editTextLogin"
@@ -37,9 +40,10 @@
 
         <TextView
             android:id="@+id/textViewSenha"
-            android:layout_width="55dp"
-            android:layout_height="39dp"
-            android:text="Senha" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="@string/senha" />
         <EditText
             android:id="@+id/editTextSenha"
             android:layout_width="wrap_content"
@@ -57,14 +61,13 @@
             android:id="@+id/checkBoxLembrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Lembrar-se" />
+            android:text="@string/lembrar" />
 
         <Button
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login" />
-
+            android:text="@string/botao_login" />
 
     </LinearLayout>
 
