--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="bg_tela_login">#396739</color>
+    <color name="bg_tela_login">#C1C2C0</color>
+    <color name="bg_tela_login_menor">#C80F0E02</color>
 </resources>
