--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="bg_tela_login">#C1C2C0</color>
     <color name="bg_tela_login_menor">#C8052597</color>
-    <drawable name="bg_cadastra_produto_menor">#03A9F4</drawable>
+    <color name="bg_cadastra_produto">#FFFFFF</color>
+    <color name="hint_cadastra_produto">#0E0D0D</color>
 </resources>
