--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,13 +21,16 @@
 
 
         <!-- Linha 1 -->
-        <TableRow android:layout_width="wrap_content">
+        <TableRow
+            android:layout_width="wrap_content"
+
+            android:layout_height="600dp">
             <!-- Linha 1 coluna 1 -->
             <Button
                 android:id="@+id/buttonProduto"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/icone_produtos"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/produto_24"
                 android:gravity="bottom|center_horizontal"
                 android:text="@string/produto"
                 android:textSize="12sp" />
@@ -37,12 +40,12 @@
 
             <!--Linha 1 Coluna 3 -->
             <Button
-                android:id="@+id/buttonVenda"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/icone_compra"
+                android:id="@+id/buttonCliente"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/cliente_24"
                 android:gravity="bottom|center_horizontal"
-                android:text="Produto"
+                android:text="Cliente"
                 android:textSize="12sp" />
 
             <!--Linha 1 Coluna 4 -->
@@ -50,13 +53,13 @@
 
             <!--Linha 1 Coluna 5 -->
             <Button
-                android:id="@+id/buttonProduto3"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/icone_produtos"
+                android:id="@+id/buttonVenda"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/venda_24"
                 android:gravity="bottom|center_horizontal"
-                android:text="Produto"
-                android:textSize="12sp"/>
+                android:text="Venda"
+                android:textSize="12sp" />
         </TableRow>
 
         <!-- Linha 2 -->
@@ -72,13 +75,13 @@
 
             <!--Linha 3 Coluna 1 -->
             <Button
-                android:id="@+id/buttonProduto1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/icone_cliente"
+                android:id="@+id/buttonRelatorio"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/relatorio_24"
                 android:gravity="bottom|center_horizontal"
-                android:text="Cliente"
-                android:textSize="12sp"/>
+                android:text="Relatorio"
+                android:textSize="12sp" />
 
             <!--Linha 3 Coluna 2 -->
             <Space android:layout_width="10dp"></Space>
@@ -88,10 +91,10 @@
                 android:id="@+id/buttonProduto4"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:background="@drawable/icone_cliente"
+                android:background="@drawable/cliente_24"
                 android:gravity="bottom|center_horizontal"
                 android:text="Cliente"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <!--Linha 3 Coluna 3 -->
             <Space android:layout_width="10dp"></Space>
@@ -101,10 +104,10 @@
                 android:id="@+id/buttonProduto6"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:background="@drawable/icone_cliente"
+                android:background="@drawable/cliente_24"
                 android:gravity="bottom|center_horizontal"
                 android:text="Cliente"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
 
         </TableRow>
