--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="bg_tela_login_menor">#C8A2B2EE</color>
     <color name="bg_cadastra_produto">#FFFFFF</color>
     <color name="hint_cadastra_produto">#0E0D0D</color>
+    <color name="color_icone_menu">#0903C5</color>
+    <color name="color_menu">#04025C</color>
 </resources>
