--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -6,16 +6,13 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
-    android:paddingLeft="50dp"
-    android:paddingTop="50dp"
-    android:paddingRight="50dp"
-    android:paddingBottom="50dp"
-    tools:context=".activities.ActivityProduto">
+    android:layout_margin="@dimen/margem_tela_menu"
+    tools:context=".activities.ActivityCadastrarProduto">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/bg_tela_login_menor"
+        android:layout_height="match_parent"
+        android:background="@color/color_menu"
         android:orientation="vertical"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
@@ -199,6 +196,8 @@
                     android:id="@+id/buttonSalvarProduto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_menu"
+                    android:textStyle="bold"
                     android:text="@string/formulario_botao_salvar" />
 
             </LinearLayout>
