--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margem_tela"
+    android:layout_margin="@dimen/margem_tela_login"
     android:background="@color/bg_tela_login"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
