--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,123 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
+    android:layout_margin="@dimen/margem_tela_menu"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
     tools:context=".activities.ActivityMenu">
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/bg_tela_login_menor"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_menu"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/buttonProduto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/produto_24"
+            android:text="@string/produto"
+            android:textColor="@color/color_menu"
+            android:textStyle="bold"
+            android:textSize="40px"
+             />
 
 
-        <!-- Linha 1 -->
-        <TableRow
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/buttonCliente"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/cliente_24"
+            android:text="@string/cliente"
+            android:textColor="@color/color_menu"
+            android:textStyle="bold"
+            android:textSize="40px"
+            />
+    </LinearLayout>
 
-            android:layout_height="600dp">
-            <!-- Linha 1 coluna 1 -->
-            <Button
-                android:id="@+id/buttonProduto"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/produto_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="@string/produto"
-                android:textSize="12sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_menu"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
-            <!-- Linha 1 Coluna 2 -->
-            <Space android:layout_width="10dp"></Space>
-
-            <!--Linha 1 Coluna 3 -->
-            <Button
-                android:id="@+id/buttonCliente"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/cliente_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="Cliente"
-                android:textSize="12sp" />
-
-            <!--Linha 1 Coluna 4 -->
-            <Space android:layout_width="10dp"></Space>
-
-            <!--Linha 1 Coluna 5 -->
-            <Button
-                android:id="@+id/buttonVenda"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/venda_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="Venda"
-                android:textSize="12sp" />
-        </TableRow>
-
-        <!-- Linha 2 -->
-        <TableRow>
-            <!--Linha 2 Coluna 1 -->
-            <Space android:layout_height="10dp"></Space>
-
-        </TableRow>
-
-        <!-- Linha 3-->
-        <TableRow>
+        <Button
+            android:id="@+id/buttonVenda"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/venda_24"
+            android:text="@string/venda"
+            android:textSize="40px"
+            />
 
 
-            <!--Linha 3 Coluna 1 -->
-            <Button
-                android:id="@+id/buttonRelatorio"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/relatorio_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="Relatorio"
-                android:textSize="12sp" />
+        <Button
+            android:id="@+id/buttonAdministrador"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/administrador_24"
+            android:text="@string/administrador"
+            android:textColor="@color/color_menu"
+            android:textStyle="bold"
+            android:textSize="30px"
+            />
+    </LinearLayout>
 
-            <!--Linha 3 Coluna 2 -->
-            <Space android:layout_width="10dp"></Space>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@color/color_menu"
+        android:layout_weight="1">
 
-            <!--Linha 3 Coluna 3 -->
-            <Button
-                android:id="@+id/buttonProduto4"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/cliente_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="Cliente"
-                android:textSize="12sp" />
-
-            <!--Linha 3 Coluna 3 -->
-            <Space android:layout_width="10dp"></Space>
-
-            <!--Linha 3 Coluna 4 -->
-            <Button
-                android:id="@+id/buttonProduto6"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:background="@drawable/cliente_24"
-                android:gravity="bottom|center_horizontal"
-                android:text="Cliente"
-                android:textSize="12sp" />
+        <Button
+            android:id="@+id/buttonRelatorio"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/relatorio_24"
+            android:text="@string/relatorio"
+            android:textColor="@color/color_menu"
+            android:textStyle="bold"
+            android:textSize="40px"
+            />
+    </LinearLayout>
 
 
-        </TableRow>
-
-        <!-- Linha 4 -->
-        <TableRow>
-            <!--Linha 4 Coluna 1 -->
-            <Space android:layout_height="10dp"></Space>
-
-        </TableRow>
-
-
-    </TableLayout>
 
 
 </LinearLayout>
