Mudanca layout cadastro cliente

--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -7,29 +7,27 @@
     android:layout_height="match_parent"
     android:background="@color/color_menu"
     android:orientation="vertical"
+    android:layout_margin="@dimen/margem_tela_menu"
     tools:context=".activities.ActivityCadastrarCliente">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margem_tela_login"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
-            <TextView
-                android:id="@+id/textViewCpf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margem_tela_login"
-                android:includeFontPadding="true"
-                android:text="@string/cpf"
-                android:textColor="@android:color/white"
-                android:textSize="18sp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                />
 
             <TextView
                 android:id="@+id/textViewNome"
@@ -39,7 +37,25 @@
                 android:includeFontPadding="true"
                 android:text="@string/nome"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/textViewCpf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margem_tela_login"
+                android:includeFontPadding="true"
+                android:text="@string/cpf"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/textViewRua"
@@ -49,17 +65,11 @@
                 android:includeFontPadding="true"
                 android:text="@string/rua"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_formulario" />
 
-            <TextView
-                android:id="@+id/textViewNumero"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margem_tela_login"
-                android:includeFontPadding="true"
-                android:text="@string/numero"
-                android:textColor="@android:color/white"
-                android:textSize="18sp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/textViewBairro"
@@ -69,7 +79,11 @@
                 android:includeFontPadding="true"
                 android:text="@string/bairro"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/textViewCidade"
@@ -79,7 +93,11 @@
                 android:includeFontPadding="true"
                 android:text="@string/cidade"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/textViewEstado"
@@ -89,7 +107,11 @@
                 android:includeFontPadding="true"
                 android:text="@string/estado"
                 android:textColor="@android:color/white"
-                android:textSize="18sp" />
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
         </LinearLayout>
 
@@ -98,6 +120,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <EditText
                 android:id="@+id/editTextCpf"
                 android:layout_width="match_parent"
@@ -105,10 +131,15 @@
                 android:layout_marginTop="@dimen/margem_tela_login"
                 android:layout_marginEnd="@dimen/margem_tela_login"
                 android:autofillHints=""
+                android:textSize="@dimen/font_formulario"
                 android:background="@android:color/white"
                 android:ems="10"
                 android:inputType="number"
                 tools:targetApi="o" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <EditText
                 android:id="@+id/editTextNome"
@@ -121,31 +152,61 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:labelFor="@id/textViewNome"
+                android:textSize="@dimen/font_formulario"
                 tools:targetApi="o" />
 
-            <EditText
-                android:id="@+id/editTextRua"
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margem_tela_login"
-                android:layout_marginEnd="@dimen/margem_tela_login"
-                android:autofillHints=""
-                android:background="@android:color/white"
-                android:ems="10"
-                android:inputType="textPersonName"
-                tools:targetApi="o" />
+                android:layout_height="20dp" />
 
-            <EditText
-                android:id="@+id/editTextNumero"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margem_tela_login"
-                android:layout_marginEnd="@dimen/margem_tela_login"
-                android:autofillHints=""
-                android:background="@android:color/white"
-                android:ems="10"
-                android:inputType="textPersonName"
-                tools:targetApi="o" />
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/editTextRua"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margem_tela_login"
+                    android:layout_marginEnd="@dimen/margem_tela_login"
+                    android:autofillHints=""
+                    android:background="@android:color/white"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:textSize="@dimen/font_formulario"
+                    tools:targetApi="o" />
+
+                <TextView
+                    android:id="@+id/textViewNumero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margem_tela_login"
+                    android:includeFontPadding="true"
+                    android:text="@string/numero"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/font_formulario" />
+
+                <EditText
+                    android:id="@+id/editTextNumero"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margem_tela_login"
+                    android:layout_marginEnd="@dimen/margem_tela_login"
+                    android:autofillHints=""
+                    android:background="@android:color/white"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:textSize="@dimen/font_formulario"
+                    tools:targetApi="o" />
+
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
 
             <EditText
                 android:id="@+id/editTextBairro"
@@ -157,7 +218,12 @@
                 android:background="@android:color/white"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:textSize="@dimen/font_formulario"
                 tools:targetApi="o" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <EditText
                 android:id="@+id/editTextCidade"
@@ -169,7 +235,12 @@
                 android:background="@android:color/white"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:textSize="@dimen/font_formulario"
                 tools:targetApi="o" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <EditText
                 android:id="@+id/editTextEstado"
@@ -181,18 +252,31 @@
                 android:background="@android:color/white"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:textSize="@dimen/font_formulario"
                 tools:targetApi="o" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+
+
         </LinearLayout>
+
 
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonSalvar"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:drawableTop="@drawable/ic_save_black_24dp"
-        android:text="@string/salvar" />
+        android:text="@string/salvar"
+        android:textSize="@dimen/font_formulario"
+        />
+
+
 
 
 </LinearLayout>
