--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="bg_cadastra_produto">#FFFFFF</color>
     <color name="hint_cadastra_produto">#0E0D0D</color>
     <color name="color_icone_menu">#0903C5</color>
-    <color name="color_menu">#04025C</color>
+    <color name="color_menu">#04027B</color>
     <color name="color_font_formulario">#fff</color>
     <color name="color_hint_formulario">#050101</color>
     <color name="color_box_formulario">#fff</color>
