--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="margem_tela_login">10dp</dimen>
     <dimen name="margem_tela_menu">15dp</dimen>
+    <dimen name="font_formulario">20sp</dimen>
+
 </resources>
